[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Arrow.png" type="Texture" id=1]
[ext_resource path="res://src/projectiles/Arrow.gd" type="Script" id=2]
[ext_resource path="res://src/overlap/Hitbox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 2.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 8.0

[node name="PlayerArrow" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
modulate = Color( 0.690196, 0.862745, 0.0823529, 1 )
collision_layer = 8
collision_mask = 4
monitoring = false
script = ExtResource( 3 )
damage = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_PlayerArrow_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerArrow_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
